--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<!-- - Basic Project Information -->
-	<groupId>com.github.stator-dev.greenpepper</groupId>
+	<groupId>com.github.strator-dev.greenpepper</groupId>
 	<artifactId>greenpepper-base</artifactId>
 	<packaging>pom</packaging>
 	<version>4.0-beta2-SNAPSHOT</version>
-	<name>GreenPepper</name>
+	<name>GreenPepper Master</name>
 
 	<properties>
 		<slf4j.version>1.6.1</slf4j.version>
@@ -70,16 +71,16 @@
 	</dependencyManagement>
 
 	<!-- - Extra project information -->
-    <url>http://strator-dev.github.io/greenpepper</url>
+	<url>http://strator-dev.github.io/greenpepper</url>
 	<inceptionYear>2005</inceptionYear>
 	<organization>
 		<name>The GreenPepper Revival project</name>
-        <url>http://strator-dev.github.io/greenpepper</url>
+		<url>http://strator-dev.github.io/greenpepper</url>
 	</organization>
 	<scm>
-		<connection>https://github.com/greenpeppersoftware/greenpepper-base.git</connection>
-        <developerConnection>scm:git:https://github.com/strator-dev/greenpepper.git</developerConnection>
-        <url>https://github.com/greenpeppersoftware/greenpepper-base</url>
+		<connection>https://github.com/strator-dev/greenpepper.git</connection>
+		<developerConnection>scm:git:https://github.com/strator-dev/greenpepper.git</developerConnection>
+		<url>https://github.com/strator-dev/greenpepper.git</url>
 	</scm>
 
 	<!-- - Configure the build plugins -->
@@ -93,9 +94,56 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.2.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9.1</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.6.3</version>
+				<extensions>true</extensions>
+				<configuration>
+					<serverId>ossrh</serverId>
+					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+					<autoReleaseAfterClose>true</autoReleaseAfterClose>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
 	<repositories>
 		<repository>
 			<id>atlassian-public-m1</id>
@@ -129,4 +177,8 @@
 		<module>greenpepper</module>
 		<module>greenpepper-maven-plugin</module>
 	</modules>
+	<issueManagement>
+		<system>Github</system>
+		<url>https://github.com/strator-dev/greenpepper/issues</url>
+	</issueManagement>
 </project>
