--- a/greenpepper/extensions/pom.xml
+++ b/greenpepper/extensions/pom.xml
@@ -10,13 +10,13 @@
 
 	<parent>
 		<artifactId>greenpepper</artifactId>
-		<groupId>com.github.stator-dev.greenpepper</groupId>
+		<groupId>com.github.strator-dev.greenpepper</groupId>
 		<version>4.0-beta2-SNAPSHOT</version>
 	</parent>
 
     <dependencies>
         <dependency>
-            <groupId>com.github.stator-dev.greenpepper</groupId>
+            <groupId>com.github.strator-dev.greenpepper</groupId>
             <artifactId>greenpepper-core</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -53,7 +53,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.stator-dev.greenpepper</groupId>
+            <groupId>com.github.strator-dev.greenpepper</groupId>
             <artifactId>greenpepper-core</artifactId>
             <type>test-jar</type>
             <version>${project.version}</version>
