--- a/confluence/pom.xml
+++ b/confluence/pom.xml
@@ -4,7 +4,7 @@
 	<!-- - Basic Project Information -->
 	<parent>
 		<artifactId>greenpepper-open</artifactId>
-		<groupId>com.github.stator-dev.greenpepper</groupId>
+		<groupId>com.github.strator-dev.greenpepper</groupId>
 		<version>4.0-beta2-SNAPSHOT</version>
 	</parent>
 
