--- a/extensions-external/grails/grails/pom.xml
+++ b/extensions-external/grails/grails/pom.xml
@@ -8,7 +8,7 @@
 	<name>GreenPepper Extensions Grails</name>
 
 	<parent>
-		<groupId>com.github.stator-dev.greenpepper</groupId>
+		<groupId>com.github.strator-dev.greenpepper</groupId>
 		<artifactId>greenpepper-extensions-parent</artifactId>
 		<version>3.1</version>
 	</parent>
@@ -20,7 +20,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.github.stator-dev.greenpepper</groupId>
+			<groupId>com.github.strator-dev.greenpepper</groupId>
 			<artifactId>greenpepper-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
