--- a/extensions-external/php/pom.xml
+++ b/extensions-external/php/pom.xml
@@ -7,7 +7,7 @@
     <name>GreenPepper Extensions PHP</name>
 
     <parent>
-		<groupId>com.github.stator-dev.greenpepper</groupId>
+		<groupId>com.github.strator-dev.greenpepper</groupId>
 		<artifactId>greenpepper-extensions-parent</artifactId>
 		<version>4.0-beta2-SNAPSHOT</version>
     </parent>
@@ -29,7 +29,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.github.stator-dev.greenpepper</groupId>
+			<groupId>com.github.strator-dev.greenpepper</groupId>
 			<artifactId>greenpepper-core</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
