--- a/extensions-external/selenium2/pom.xml
+++ b/extensions-external/selenium2/pom.xml
@@ -7,7 +7,7 @@
 	<name>GreenPepper Extensions Selenium2</name>
 
 	<parent>
-		<groupId>com.github.stator-dev.greenpepper</groupId>
+		<groupId>com.github.strator-dev.greenpepper</groupId>
 		<artifactId>greenpepper-extensions-parent</artifactId>
 		<version>4.0-beta2-SNAPSHOT</version>
 	</parent>
@@ -18,7 +18,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.github.stator-dev.greenpepper</groupId>
+			<groupId>com.github.strator-dev.greenpepper</groupId>
 			<artifactId>greenpepper-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -42,7 +42,7 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>com.github.stator-dev.greenpepper</groupId>
+				<groupId>com.github.strator-dev.greenpepper</groupId>
 				<artifactId>greenpepper-maven-plugin</artifactId>
 				<version>${greenpepper.maven.plugin.version}</version>
 				<configuration>
