--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -9,7 +9,7 @@
     <name>GreenPepper Samples</name>
 
     <parent>
-        <groupId>com.github.stator-dev.greenpepper</groupId>
+        <groupId>com.github.strator-dev.greenpepper</groupId>
         <artifactId>greenpepper-open</artifactId>
         <version>4.0-beta2-SNAPSHOT</version>
     </parent>
@@ -28,7 +28,7 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>com.github.stator-dev.greenpepper</groupId>
+                <groupId>com.github.strator-dev.greenpepper</groupId>
                 <artifactId>greenpepper-maven-plugin</artifactId>
                 <version>${greenpepper.maven.plugin.version}</version>
                 <configuration>
@@ -81,7 +81,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.github.stator-dev.greenpepper</groupId>
+            <groupId>com.github.strator-dev.greenpepper</groupId>
             <artifactId>greenpepper-extensions-java</artifactId>
             <version>${project.version}</version>
         </dependency>
