--- a/greenpepper/core-tests/pom.xml
+++ b/greenpepper/core-tests/pom.xml
@@ -9,7 +9,7 @@
 
 	<parent>
 		<artifactId>greenpepper</artifactId>
-		<groupId>greenpepper</groupId>
+		<groupId>com.github.strator-dev.greenpepper</groupId>
 		<version>4.0-SNAPSHOT</version>
 	</parent>
 
@@ -17,7 +17,7 @@
 		<!-- NO dependencies other than JUnit and JMock as defined in the parent 
 			pom.xml -->
 		<dependency>
-			<groupId>greenpepper</groupId>
+			<groupId>com.github.strator-dev.greenpepper</groupId>
 			<artifactId>greenpepper-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -78,7 +78,7 @@
 				</executions>
 			</plugin>
 			<plugin>
-				<groupId>greenpepper</groupId>
+				<groupId>com.github.strator-dev.greenpepper</groupId>
 				<artifactId>greenpepper-maven-plugin</artifactId>
 				<version>${project.version}</version>
 				<configuration>
