--- a/greenpepper-confluence/pom.xml
+++ b/greenpepper-confluence/pom.xml
@@ -4,7 +4,7 @@
 	<!-- - Basic Project Information -->
 	<parent>
 		<artifactId>greenpepper-base</artifactId>
-		<groupId>greenpepper</groupId>
+		<groupId>com.github.strator-dev.greenpepper</groupId>
 		<version>2.11-SNAPSHOT</version>
 	</parent>
 
