--- a/greenpepper-maven-plugin/pom.xml
+++ b/greenpepper-maven-plugin/pom.xml
@@ -4,25 +4,25 @@
     <!--
        - Basic Information
        -->
-    <groupId>greenpepper</groupId>
+    <groupId>com.github.strator-dev.greenpepper</groupId>
     <artifactId>greenpepper-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <name>GreenPepper Maven2 Plugin</name>
 
     <parent>
         <artifactId>greenpepper-base</artifactId>
-        <groupId>greenpepper</groupId>
+        <groupId>com.github.strator-dev.greenpepper</groupId>
         <version>2.11-SNAPSHOT</version>
     </parent>
 
     <dependencies>
         <dependency>
-            <groupId>greenpepper</groupId>
+            <groupId>com.github.strator-dev.greenpepper</groupId>
             <artifactId>greenpepper-core</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>greenpepper</groupId>
+            <groupId>com.github.strator-dev.greenpepper</groupId>
             <artifactId>greenpepper-extensions-java</artifactId>
             <version>${project.version}</version>
         </dependency>
