--- a/greenpepper-maven-plugin/pom.xml
+++ b/greenpepper-maven-plugin/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <artifactId>greenpepper-base</artifactId>
         <groupId>com.github.strator-dev.greenpepper</groupId>
-        <version>2.11-SNAPSHOT</version>
+        <version>2.10.1</version>
     </parent>
 
     <dependencies>
