--- a/greenpepper/greenpepper-license/pom.xml
+++ b/greenpepper/greenpepper-license/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>greenpepper</artifactId>
         <groupId>com.github.strator-dev.greenpepper</groupId>
-        <version>2.11-SNAPSHOT</version>
+        <version>2.10.1</version>
     </parent>
     <artifactId>greenpepper-license</artifactId>
     <packaging>jar</packaging>
