--- a/greenpepper-confluence/greenpepper-confluence-code/pom.xml
+++ b/greenpepper-confluence/greenpepper-confluence-code/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>greenpepper-confluence</artifactId>
         <groupId>com.github.strator-dev.greenpepper</groupId>
-        <version>2.10.1</version>
+        <version>2.11-SNAPSHOT</version>
     </parent>
     <artifactId>greenpepper-confluence-code</artifactId>
     <name>GreenPepper Confluence Code</name>
