--- a/greenpepper-confluence/pom.xml
+++ b/greenpepper-confluence/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>greenpepper-base</artifactId>
 		<groupId>com.github.strator-dev.greenpepper</groupId>
-		<version>2.10.1</version>
+		<version>2.11-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>greenpepper-confluence</artifactId>
