--- a/greenpepper/extensions/pom.xml
+++ b/greenpepper/extensions/pom.xml
@@ -11,7 +11,7 @@
 	<parent>
 		<artifactId>greenpepper</artifactId>
 		<groupId>com.github.strator-dev.greenpepper</groupId>
-		<version>2.10.1</version>
+		<version>2.11-SNAPSHOT</version>
 	</parent>
 
     <dependencies>
