--- a/greenpepper/greenpepper-server/pom.xml
+++ b/greenpepper/greenpepper-server/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>greenpepper</artifactId>
 		<groupId>com.github.strator-dev.greenpepper</groupId>
-		<version>2.10.1</version>
+		<version>2.11-SNAPSHOT</version>
 	</parent>
 	<artifactId>greenpepper-server</artifactId>
 	<packaging>jar</packaging>
