--- a/greenpepper/pom.xml
+++ b/greenpepper/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>greenpepper-base</artifactId>
 		<groupId>com.github.strator-dev.greenpepper</groupId>
-		<version>2.10.1</version>
+		<version>2.11-SNAPSHOT</version>
 	</parent>
 
 	<!-- - Basic Project Information -->
