--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.github.strator-dev.greenpepper</groupId>
 	<artifactId>greenpepper-base</artifactId>
 	<packaging>pom</packaging>
-	<version>2.10.1</version>
+	<version>2.11-SNAPSHOT</version>
 	<name>GreenPepper</name>
 
 	<properties>
