Make the client-complete.jar launchable. Add the main class in the manifest

--- a/greenpepper/greenpepper-client/pom.xml
+++ b/greenpepper/greenpepper-client/pom.xml
@@ -197,6 +197,12 @@
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
 					<descriptor>src/main/assembly/dep.xml</descriptor>
+					<archive>
+						<addMavenDescriptor>true</addMavenDescriptor>
+						<manifest>
+							<mainClass>com.greenpepper.runner.Main</mainClass>
+						</manifest>
+					</archive>
 				</configuration>
 				<executions>
 					<execution>
