--- a/greenpepper-maven-runner/pom.xml
+++ b/greenpepper-maven-runner/pom.xml
@@ -13,7 +13,7 @@
 	</parent>
 
 	<properties>
-		<maven.version>3.3.1</maven.version>
+		<maven.version>3.3.3</maven.version>
 		<slf4j.version>1.7.12</slf4j.version>
 		<wagonVersion>1.0</wagonVersion>
 		<aetherVersion>1.0.2.v20150114</aetherVersion>
@@ -103,6 +103,7 @@
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
+			<version>1.1.3</version><!--$NO-MVN-MAN-VER$-->
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
