--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<!-- - Basic Project Information -->
@@ -181,7 +181,8 @@
 	<modules>
 		<module>greenpepper</module>
 		<module>greenpepper-maven-plugin</module>
-	</modules>
+    <module>greenpepper-maven-plugin-it</module>
+  </modules>
 	<issueManagement>
 		<system>Github</system>
 		<url>https://github.com/strator-dev/greenpepper/issues</url>
