--- a/greenpepper/greenpepper-client/pom.xml
+++ b/greenpepper/greenpepper-client/pom.xml
@@ -69,7 +69,6 @@
 			<artifactId>xmlrpc</artifactId>
 			<version>2.0.1</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.apache.xmlrpc</groupId>
 			<artifactId>xmlrpc-client</artifactId>
@@ -80,6 +79,12 @@
 			<artifactId>xmlrpc-common</artifactId>
 			<version>3.1.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>18.0</version>
+		</dependency>
+			
 
 		<dependency>
 			<groupId>org.jmock</groupId>
