--- a/greenpepper/extensions/pom.xml
+++ b/greenpepper/extensions/pom.xml
@@ -37,9 +37,9 @@
             <version>1.0</version>
         </dependency>
 		<dependency>
-			<groupId>commons-logging</groupId>
-			<artifactId>commons-logging</artifactId>
-			<version>1.1.1</version>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<scope>test</scope>
 		</dependency>
         <dependency>
             <groupId>org.apache.ant</groupId>
@@ -57,7 +57,12 @@
             <artifactId>greenpepper-core</artifactId>
             <type>test-jar</type>
             <version>${project.version}</version>
-            <scope>fixture</scope>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+        	<groupId>ch.qos.logback</groupId>
+        	<artifactId>logback-classic</artifactId>
+        	<scope>test</scope>
         </dependency>
     </dependencies>
 
