--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.github.strator-dev.greenpepper</groupId>
 	<artifactId>greenpepper-base</artifactId>
 	<packaging>pom</packaging>
-	<version>4.0-beta2-SNAPSHOT</version>
+	<version>4.0-beta2</version>
 	<name>GreenPepper Master</name>
 	<description>GreenPepper is a collaboration platform to help business experts and developers create executable specifications in order to build the right software.</description>
 
@@ -94,7 +94,8 @@
 		<connection>https://github.com/strator-dev/greenpepper.git</connection>
 		<developerConnection>scm:git:https://github.com/strator-dev/greenpepper.git</developerConnection>
 		<url>https://github.com/strator-dev/greenpepper.git</url>
-	</scm>
+	  <tag>greenpepper-base-4.0-beta2</tag>
+  </scm>
 	<licenses>
 		<license>
 			<name>GPLv2</name>
