--- a/extensions-external/guice/pom.xml
+++ b/extensions-external/guice/pom.xml
@@ -15,13 +15,13 @@
 		<dependency>
 			<groupId>com.github.strator-dev.greenpepper</groupId>
 			<artifactId>greenpepper-core</artifactId>
-			<version>${project.version}</version>
+			<version>${greenpepper.core.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.strator-dev.greenpepper</groupId>
 			<artifactId>greenpepper-core</artifactId>
 			<type>test-jar</type>
-			<version>${project.version}</version>
+			<version>${greenpepper.core.version}</version>
 			<scope>fixture</scope>
 		</dependency>
 		<dependency>
@@ -41,7 +41,7 @@
 			<plugin>
 				<groupId>com.github.strator-dev.greenpepper</groupId>
 				<artifactId>greenpepper-maven-plugin</artifactId>
-				<version>${greenpepper.maven.plugin.version}</version>
+				<version>${greenpepper.core.version}</version>
 				<configuration>
 					<source>1.5</source>
 					<target>1.5</target>
