--- a/extensions-external/ognl/pom.xml
+++ b/extensions-external/ognl/pom.xml
@@ -15,7 +15,7 @@
 		<dependency>
 			<groupId>com.github.strator-dev.greenpepper</groupId>
 			<artifactId>greenpepper-core</artifactId>
-			<version>${project.version}</version>
+			<version>${greenpepper.core.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>ognl</groupId>
@@ -29,7 +29,7 @@
 			<plugin>
 				<groupId>com.github.strator-dev.greenpepper</groupId>
 				<artifactId>greenpepper-maven-plugin</artifactId>
-				<version>${greenpepper.maven.plugin.version}</version>
+				<version>${greenpepper.core.version}</version>
 				<configuration>
 					<source>1.5</source>
 					<target>1.5</target>
