--- a/extensions-external/selenium2/pom.xml
+++ b/extensions-external/selenium2/pom.xml
@@ -20,7 +20,7 @@
 		<dependency>
 			<groupId>com.github.strator-dev.greenpepper</groupId>
 			<artifactId>greenpepper-core</artifactId>
-			<version>${project.version}</version>
+			<version>${greenpepper.core.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.guice</groupId>
@@ -44,7 +44,7 @@
 			<plugin>
 				<groupId>com.github.strator-dev.greenpepper</groupId>
 				<artifactId>greenpepper-maven-plugin</artifactId>
-				<version>${greenpepper.maven.plugin.version}</version>
+				<version>${greenpepper.core.version}</version>
 				<configuration>
 					<source>1.5</source>
 					<target>1.5</target>
